--- a/TIS/.settings/org.eclipse.core.resources.prefs
+++ b/TIS/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/Artista/Artista_CRUD.java=UTF-8
+encoding//src/Artista/EditarDados.java=UTF-8
 encoding//src/Cliente/Cliente_CRUD.java=UTF-8
+encoding//src/Cliente/EditarDados.java=UTF-8
 encoding//src/Fornecedor/Fornecedor_CRUD.java=UTF-8
 encoding//src/Produto/Produto_CRUD.java=UTF-8
